-add pseudo element to projects so the anchor jumps to correct place -adjust freelance pseudo element

--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,7 @@ section {
 #freelance:before {
 	content:"";
 	display: block;
-	height: 3.6em;
-	margin: -3.6em 0 0;
+	height: 3em;
 }
 
 #projects {
@@ -67,6 +66,12 @@ section {
 	background-size: cover;
 	background-position: 0em 0em;
 	-webkit-filter: saturate(2);
+}
+
+#projects:before {
+	content:"";
+	display: block;
+	height: 3em;
 }
 
 #footer {
